clang/test/Preprocessor/embed_file_not_found_quote.c
// RUN: %clang_cc1 -std=c23 %s -E -verify

#embed "nfejfNejAKFe"
// expected-error@-1 {{'nfejfNejAKFe' file not found}}
